# guardian-ai-workspace

./: Cargo.toml  guardian_brain.db  guardian_config.toml  safety_rules.toml  structure.txt
.guardian_vault/: .key
cli/: Cargo.toml
cli/src/: main.rs
crates/guardian-core/: Cargo.toml
crates/guardian-core/src/: db.rs  event.rs  lib.rs  notification.rs  types.rs
crates/guardian-mcp/: Cargo.toml
crates/guardian-mcp/src/: lib.rs  server.rs  tool_trait.rs
crates/guardian-mcp/src/tools/: get_system_state.rs  log_agent_intent.rs  mod.rs  query_semantic_context.rs  validate_token.rs
crates/guardian-protection/: Cargo.toml
crates/guardian-protection/src/: config.rs  engine.rs  lib.rs  types.rs
crates/guardian-protection/src/gate/: mod.rs  permission_gate.rs
crates/guardian-protection/src/kill_switch/: kill_switch.rs  mod.rs  os_suspend.rs  process_tree.rs
crates/guardian-protection/src/risk/: engine.rs  mod.rs  policy_trait.rs
crates/guardian-protection/src/risk/policies/: destructive_action.rs  mod.rs  scope_ambiguity.rs  system_resource.rs  untrusted_agent.rs
crates/guardian-protection/src/rollback/: file_copy.rs  metadata_only.rs  mod.rs  strategy_trait.rs  vault.rs
crates/guardian-protection/src/safety/: mod.rs  rules_engine.rs
crates/guardian-sensors/: Cargo.toml
crates/guardian-sensors/src/: fs_sensor.rs  lib.rs  process_sensor.rs  trait_def.rs
crates/guardian-ui/: Cargo.toml  tauri.conf.json
