[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
guardian-core = { path = "../crates/guardian-core" }
guardian-sensors = { path = "../crates/guardian-sensors" }
guardian-mcp = { path = "../crates/guardian-mcp" }
# guardian-ui = { path = "../crates/guardian-ui" }
guardian-protection = { path = "../crates/guardian-protection" }
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0" # <--- ADD THIS LINE
