[package]
name = "guardian-protection"
version = "0.1.0"
edition = "2024"

[dependencies]
guardian-core = { path = "../guardian-core" }
tokio         = { version = "1.0",  features = ["full"] }
serde         = { version = "1.0",  features = ["derive"] }
serde_json    = "1.0"
async-trait   = "0.1"
uuid          = { version = "1.0",  features = ["v4"] }
toml          = "0.8"
sha2          = { version = "0.10", features = ["std"] }
aes-gcm       = "0.10"
rand          = "0.8"
anyhow        = "1.0"
rusqlite      = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]}

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }