[package]
name = "guardian-sensors"
version = "0.1.0"
edition = "2024"

[dependencies]
guardian-core = { path = "../guardian-core" }
tokio = { version = "1.36", features = ["sync", "rt"] }
async-trait = "0.1.77"
notify = "6.1.1"
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
sysinfo = "0.30.5"